Update classes.